# PistolsAtDawn

./: CMakeLists.txt  LICENSE  PistolsAtDawn.cpp  README.md
example/: Sphere.cpp  Sphere.h  SyntheticData.cpp  SyntheticData.h  main.cpp
src/: Dual.cpp  Dual.h  Loss.cpp  Loss.h  Optimization.cpp  Optimization.h  PistolsAtDawn.cpp  SyntheticData.cpp  SyntheticData.h  stdafx.cpp
